--- a/server/.env.example
+++ b/server/.env.example
@@ -1,14 +1,20 @@
-# Luna AI Server Environment Variables
-
-# Google AI Studio (Gemini)
-GEMINI_API_KEY=your_gemini_api_key_here
-
-# Opik/Comet Configuration
-OPIK_API_KEY=your_opik_api_key_here
-OPIK_WORKSPACE=your_workspace_name
-
-# JWT Secret for Auth
-JWT_SECRET=your_jwt_secret_key_here
-
-# Server Port
+# Server Configuration
 PORT=3001
+NODE_ENV=development
+
+# Database
+DATABASE_URL=postgresql://user:password@localhost:5432/luna_ai
+
+# AI Services
+GEMINI_API_KEY=your_gemini_api_key
+OPIK_API_KEY=your_opik_api_key
+OPIK_WORKSPACE=your_opik_workspace
+
+# Security
+JWT_SECRET=your_jwt_secret_key
+
+# Payments (x402)
+PAYMENT_ADDRESS=0xYourWalletAddress
+PAYMENT_AMOUNT=10000000000000000
+PAYMENT_CURRENCY=NATIVE
+SKIP_PAYMENT=false
