--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.60.0",
+    "@privy-io/react-auth": "^3.13.1",
     "@tailwindcss/postcss": "^4.1.18",
     "autoprefixer": "^10.4.24",
     "clsx": "^2.1.1",
@@ -23,7 +24,8 @@
     "react-dom": "^19.2.0",
     "react-i18next": "^16.5.4",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.18"
+    "tailwindcss": "^4.1.18",
+    "viem": "^2.45.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
